<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hitachi_tstv.mist.it.pod_nmt.SupplierDeliveryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linBottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgSymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:padding="10dp"
                    android:tint="@color/OrangeRed"
                    app:srcCompat="@drawable/home1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:textColor="@color/Black"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mini_margin"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="6"
                        android:inputType="number"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pallet"
                        android:textColor="@color/Black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0"
                    android:text="@string/percent_load"
                    android:textAlignment="center"
                    android:textColor="@color/Black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.beardedhen.androidbootstrap.BootstrapProgressBar
                    android:id="@+id/progess_truck"
                    style="@style/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0"

                    app:animated="false"
                    app:bootstrapBrand="primary"
                    app:bootstrapMaxProgress="100"
                    app:bootstrapSize="xl"
                    app:bootstrapshowPercentage="true"
                    app:striped="true" />

                <Spinner
                    android:id="@+id/spnSDAPercentage"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mini_margin"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_comment"
                    android:layout_width="300dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="0.52"
                    android:ems="10"
                    android:hint="@string/comment"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textSize="@dimen/txt_h3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_left"
                    android:layout_width="@dimen/picture_width"
                    android:layout_height="@dimen/picture_height"
                    android:layout_margin="@dimen/mini_margin"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/img_l" />

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="@dimen/picture_width"
                    android:layout_height="@dimen/picture_height"
                    android:layout_margin="@dimen/mini_margin"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/img_b" />

                <ImageView
                    android:id="@+id/img_right"
                    android:layout_width="@dimen/picture_width"
                    android:layout_height="@dimen/picture_height"
                    android:layout_margin="@dimen/mini_margin"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/img_r" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_4"
                    android:layout_width="@dimen/picture_width_l"
                    android:layout_height="@dimen/picture_height_l"
                    android:layout_margin="@dimen/mini_margin"
                    android:layout_weight="0.5"
                    app:srcCompat="@drawable/warehouse2" />

                <ImageView
                    android:id="@+id/img_5"
                    android:layout_width="@dimen/picture_width_l"
                    android:layout_height="@dimen/picture_height_l"
                    android:layout_margin="@dimen/mini_margin"
                    android:layout_weight="0.5"
                    app:srcCompat="@drawable/warehouse2" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_6"
                    android:layout_width="@dimen/picture_width_l"
                    android:layout_height="@dimen/picture_height_l"
                    android:layout_margin="@dimen/mini_margin"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/warehouse2" />

                <ImageView
                    android:id="@+id/img_7"
                    android:layout_width="@dimen/picture_width_l"
                    android:layout_height="@dimen/picture_height_l"
                    android:layout_margin="@dimen/mini_margin"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/warehouse2" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_arrival"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/mini_margin"
            android:layout_weight="1"
            android:background="@drawable/green_button"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/arrival"
            android:textSize="@dimen/txt_h3"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_savepic"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/mini_margin"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/Savepic"
            android:textSize="@dimen/txt_h3"
            android:textStyle="bold"
            android:visibility="gone" />


        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/mini_margin"
            android:layout_weight="1"
            android:background="@drawable/salmon_button"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/departure"
            android:textSize="@dimen/txt_h3"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>